--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "苹方", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-  background-color: #e5e5e5;
+  background-color: #121212;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -349,7 +349,7 @@ body {
     justify-content: space-between;
     padding: 0;
     z-index: 999;
-    border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #181818;
     border-radius: 27.5px; /* 四个角都有圆角 */
     padding-left: 0; /* 移除左边padding */
 }
@@ -377,7 +377,7 @@ body {
 }
 
 .song-title {
-    color: #333; /* 改为深色文字 */
+    color: #fff; /* 改为深色文字 */
     font-size: 0.85rem;
     font-weight: 400;
     line-height: 1.2;
@@ -410,7 +410,7 @@ body {
     left: 0;
     right: 0;
     height: 60px;
-    background-color: #ffffff;
+    background-color: #121212;
     border-top: 1px solid #e5e5e5;
     display: flex;
     justify-content: space-around;
