--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ body {
     flex-direction: column;
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
-    background-color: #f5f5f5;
+    background-color: #121212;
     overflow: hidden;
     margin-bottom: 115px; /* 调整为音乐播放器和底部导航留出空间 */
 }
@@ -198,7 +198,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    color: #333;
+    color: #fff;
     font-size: 0.925rem;
 }
 
