--- a/css/style.css
+++ b/css/style.css
@@ -215,8 +215,8 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 8px 15px;
-    color: #000;
-    font-size: 0.75rem;
+    color: #fff;
+    font-size: 0.825rem;
     flex-shrink: 0;
 }
 
@@ -240,7 +240,7 @@ body {
 }
 
 .box5-name {
-    color: #333;
+    color: #fff;
     font-size: 0.9rem;
     font-weight: normal;
     line-height: 1.2;
@@ -276,7 +276,7 @@ body {
     flex-direction: row;
     align-items: center;
     font-size: 1rem;
-    color: #aaa;
+    color: #fff;
     gap: 8px;
 }
 
@@ -343,7 +343,7 @@ body {
     right: 0;
     width: 100%;
     height: 55px;
-    background-color: #f0f0f0; /* 灰白色背景 */
+    background-color: #181818; /* 灰白色背景 */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -410,7 +410,7 @@ body {
     left: 0;
     right: 0;
     height: 60px;
-    background-color: #121212;
+    background-color: #fff;
     border-top: 1px solid #e5e5e5;
     display: flex;
     justify-content: space-around;
